--- a/app/src/main/res/layout/property_list_item_holder.xml
+++ b/app/src/main/res/layout/property_list_item_holder.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/card_view"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
     app:cardBackgroundColor="@color/white"
@@ -13,7 +14,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="15dp"
@@ -72,6 +72,7 @@
 
         <View
             android:layout_width="1dp"
+            android:id="@+id/tv_line"
             android:layout_height="match_parent"
             android:background="@color/background_gray"
         />
