--- a/app/src/main/res/layout/task_header_holder.xml
+++ b/app/src/main/res/layout/task_header_holder.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="15dp"
     android:background="@color/background_gray"
     android:orientation="vertical">
     <TextView
