设备查询修改

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="5dp"
                 android:gravity="center"
+                android:visibility="gone"
                 android:padding="10dp"
                 android:src="@mipmap/rob_hall" />
         </RelativeLayout>
