--- a/app/src/main/res/layout/fragment_equipment_type_form.xml
+++ b/app/src/main/res/layout/fragment_equipment_type_form.xml
@@ -11,6 +11,7 @@
         android:background="@color/white"
         android:orientation="horizontal"
         android:paddingBottom="20dp"
+        android:layout_marginBottom="1dp"
         android:paddingTop="20dp">
 
         <TextView
@@ -31,10 +32,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
         android:background="@color/white"
         android:orientation="vertical"
         android:paddingBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:paddingTop="7dp">
 
         <TextView
@@ -59,16 +60,18 @@
             android:textSize="13sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_sure_button"
-        style="@style/common_sure_button"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="25dp"
-        android:paddingBottom="15dp"
-        android:paddingTop="15dp"
-        android:text="确定" />
+    <!--<TextView-->
+        <!--android:id="@+id/tv_sure_button"-->
+        <!--style="@style/common_sure_button"-->
+        <!--android:layout_marginBottom="30dp"-->
+        <!--android:layout_marginTop="25dp"-->
+        <!--android:paddingBottom="15dp"-->
+        <!--android:paddingTop="15dp"-->
+        <!--android:text="确定" />-->
 
     <android.support.v7.widget.RecyclerView
+        android:overScrollMode="never"
+        android:scrollbars="none"
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
