--- a/app/src/main/res/layout/equipment_search_list_item_holder.xml
+++ b/app/src/main/res/layout/equipment_search_list_item_holder.xml
@@ -22,17 +22,23 @@
         <TextView
             android:id="@+id/tv_item_name"
             style="@style/normal_content_text"
-            android:layout_width="wrap_content"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_height="wrap_content"
             android:text="一号设备名称" />
 
         <TextView
             android:id="@+id/tv_item_code"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxLines="1"
             style="@style/normal_content_gray_text"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="编号：123124125439" />
+            android:text="123124125439" />
 
     </LinearLayout>
 
