--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,7 +4,7 @@
         <item>我的任务</item>
         <item>我的表单</item>
         <item>抢单大厅</item>
-        <item>我的订单</item>
+        <item>我的工单</item>
         <item>访客列表</item>
         <item>管理通知</item>
         <item>投诉建议</item>
