--- a/app/src/main/res/layout/equipment_search_list_item_holder.xml
+++ b/app/src/main/res/layout/equipment_search_list_item_holder.xml
@@ -31,11 +31,10 @@
 
         <TextView
             android:id="@+id/tv_item_code"
-            android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="1"
             style="@style/normal_content_gray_text"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:text="123124125439" />
