--- a/app/src/main/res/layout/fragment_register_account.xml
+++ b/app/src/main/res/layout/fragment_register_account.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/login_rl"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/login_rl"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -24,8 +25,8 @@
                 android:layout_marginTop="40dp"
                 android:background="@drawable/bg_edittext_normal_shape"
                 android:drawablePadding="10dp"
-                android:maxLength="4"
                 android:hint="姓名"
+                android:maxLength="4"
                 android:paddingBottom="10dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="5dp"
@@ -33,7 +34,8 @@
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/BC_1"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
+
             <EditText
                 android:id="@+id/et_phone_num"
                 android:layout_width="match_parent"
@@ -51,20 +53,23 @@
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/BC_1"
-                android:textSize="15sp"/>
-            <RelativeLayout android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="47dp"
-                            android:layout_marginRight="47dp"
-                            android:layout_marginTop="15dp"
-                            android:background="@drawable/bg_edittext_normal_shape">
+                android:textSize="15sp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="47dp"
+                android:layout_marginRight="47dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/bg_edittext_normal_shape">
+
                 <EditText
                     android:id="@+id/et_passwrod"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:background="@null"
                     android:drawablePadding="10dp"
                     android:hint="密码"
-                    android:background="@null"
                     android:inputType="textPassword"
                     android:paddingBottom="10dp"
                     android:paddingLeft="10dp"
@@ -72,7 +77,8 @@
                     android:singleLine="true"
                     android:textColor="@color/black"
                     android:textColorHint="@color/BC_1"
-                    android:textSize="15sp"/>
+                    android:textSize="15sp" />
+
                 <ImageView
                     android:id="@+id/iv_pwd_isvisible"
                     android:layout_width="wrap_content"
@@ -80,14 +86,15 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:padding="10dp"
-                    android:src="@mipmap/pwd_invisible_icon"/>
+                    android:src="@mipmap/pwd_invisible_icon" />
             </RelativeLayout>
 
-            <RelativeLayout android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="47dp"
-                            android:layout_marginRight="47dp"
-                            android:layout_marginTop="12dp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="47dp"
+                android:layout_marginRight="47dp"
+                android:layout_marginTop="12dp">
 
                 <TextView
                     android:id="@+id/tv_red_tip"
@@ -97,8 +104,7 @@
                     android:text="请输入正确的11位手机号"
                     android:textColor="@color/TC_3"
                     android:textSize="13sp"
-                    android:visibility="invisible"
-                />
+                    android:visibility="invisible" />
             </RelativeLayout>
 
             <Button
@@ -115,20 +121,22 @@
                 android:paddingTop="10dp"
                 android:text="注册"
                 android:textColor="@color/white"
-                android:textSize="15sp"/>
+                android:textSize="15sp" />
 
-            <LinearLayout android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:layout_gravity="center_horizontal"
-                          android:layout_marginTop="30dp"
-                          android:gravity="center_vertical"
-                          android:orientation="horizontal">
-                <CheckBox android:id="@+id/cb_isagree"
-                          android:layout_width="13dp"
-                          android:layout_height="13dp"
-                          android:background="@drawable/protocol_checkbox_selector"
-                          android:button="@null"
-                          android:checked="true"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.AppCompatCheckBox
+                    android:id="@+id/cb_isagree"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -136,7 +144,8 @@
                     android:gravity="center"
                     android:text="我同意"
                     android:textColor="@color/TC_1"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" />
+
                 <TextView
                     android:id="@+id/tv_register_protocol"
                     android:layout_width="wrap_content"
@@ -145,7 +154,7 @@
                     android:gravity="center"
                     android:text="《用户注册协议》"
                     android:textColor="@color/app_primary_color"
-                    android:textSize="13sp"/>
+                    android:textSize="13sp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
