--- a/app/src/main/res/layout/myorder_evaluate_footer_holder.xml
+++ b/app/src/main/res/layout/myorder_evaluate_footer_holder.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     android:paddingBottom="10dp"
-    android:orientation="vertical"
->
+    android:orientation="vertical">
     <View android:layout_width="match_parent" android:layout_height="10dp"
           android:background="@color/background_gray"/>
 
@@ -27,12 +26,13 @@
             android:textSize="15sp"/>
         <android.support.v7.widget.AppCompatRatingBar
             android:id="@+id/ratingBar"
-            style="@style/foodRatingBar"
             android:layout_width="wrap_content"
             android:isIndicator="true"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
+            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
             android:numStars="5"
+            android:progressTint="@color/TC_3"
             android:rating="3.5"/>
 
     </LinearLayout>
