--- a/app/src/main/res/layout/myorder_time_line_footer_holder.xml
+++ b/app/src/main/res/layout/myorder_time_line_footer_holder.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="订单记录"
+            android:text="工单记录"
             android:textColor="@color/TC_1"
             android:textSize="15sp"/>
 
