--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,12 @@
         <item name="windowActionModeOverlay">true</item>
         <item name="android:textColor">@color/TC_1</item>
         <item name="actionModeStyle">@style/ActionMode</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!--checkBox未选中的颜色-->
+        <item name="colorControlNormal">@color/TC_2</item>
+        <!--cheackBox选中的颜色-->
+        <item name="colorControlActivated">@color/app_primary_color</item>
     </style>
 
     <style name="ActionMode" parent="Widget.AppCompat.ActionMode">
@@ -41,6 +47,10 @@
         <item name="tabBackground">@color/white</item>
     </style>
 
+    <style name="MyCheckBox" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/app_primary_color</item>
+        <item name="colorControlActivated">@color/black</item>
+    </style>
     <style name="TabTextStyle" parent="TextAppearance.Design.Tab">
         <!--文字大小-->
         <item name="android:textSize">13sp</item>
@@ -48,11 +58,18 @@
         <item name="android:textColor">@color/TC_2</item>
         <item name="android:textAllCaps">false</item>
     </style>
-    <!--星星的样式-->
-    <style name="foodRatingBar" parent="@android:style/Widget.RatingBar">
-        <item name="android:progressDrawable">@drawable/ratingstars</item>
-        <item name="android:minHeight">13dip</item>
-        <item name="android:maxHeight">30dip</item>
+    <!--&lt;!&ndash;星星的样式&ndash;&gt;-->
+    <!--<style name="foodRatingBar" parent="@android:style/Widget.RatingBar">-->
+        <!--<item name="android:progressDrawable">@drawable/ratingstars</item>-->
+        <!--<item name="android:minHeight">13dip</item>-->
+        <!--<item name="android:maxHeight">30dip</item>-->
+    <!--</style>-->
+    <style name="RatingBar" parent="Base.Widget.AppCompat.RatingBar.Small">
+        <item name="colorControlActivated">@color/TC_3</item>
+    </style>
+    <style name="RatingBarTheme" parent="ToolBarTheme">
+        <item name="colorControlNormal">@color/TC_2</item>
+        <item name="colorControlActivated">@color/TC_3</item>
     </style>
     <!--15dp黑-->
     <style name="normal_content_text">
