--- a/app/src/main/res/layout/personal_info_item_holder.xml
+++ b/app/src/main/res/layout/personal_info_item_holder.xml
@@ -44,8 +44,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="物业经理联系方式" />
-
         <TextView
+            android:id="@+id/tv_name"
+            style="@style/small_content_gray_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="姓名：" />
+        <TextView
+            android:layout_marginTop="2dp"
             android:id="@+id/tv_phone"
             style="@style/small_content_gray_text"
             android:layout_width="wrap_content"
