--- a/app/src/main/res/layout/activity_submit_form.xml
+++ b/app/src/main/res/layout/activity_submit_form.xml
@@ -8,18 +8,12 @@
 
     <include layout="@layout/base_toolbar" />
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_list"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
         android:overScrollMode="never"
-        android:scrollbars="none"
-        android:layout_height="wrap_content">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:overScrollMode="never"
-            android:scrollbars="none" />
-    </ScrollView>
+        android:scrollbars="none" />
 
 </LinearLayout>
