--- a/app/src/main/res/layout/list_multi_radio_holder.xml
+++ b/app/src/main/res/layout/list_multi_radio_holder.xml
@@ -13,11 +13,17 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
         android:text="桌子：" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_radio_list"
-        android:overScrollMode="never"
-        android:scrollbars="none"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         />
+        android:descendantFocusability="blocksDescendants">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_radio_list"
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </RelativeLayout>
+
 </LinearLayout>
